name:               cook
version:            0.1
build-type:         Simple
cabal-version:      >= 1.20
maintainer:         Miëtek Bak <hello@mietek.io>
stability:          experimental
homepage:           https://github.com/mietek/cook
extra-source-files: README.md
synopsis:           The λ-calculus in Haskell in four different ways
description:        A runnable version of Augustsson’s paper describing how to implement the λ-calculus in Haskell in four different ways.

executable cook
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      containers,
                      mtl,
                      pretty
  other-modules:      DeBruijn,
                      HOAS,
                      IdInt,
                      Lambda,
                      Misc,
                      Simple,
                      Unique
